# tatoeba

./: base.py  convert_to_parquet.py  ita.parquet  lang_list.py  links.parquet  pyproject.toml  sentences.parquet  sentences_with_audio.parquet  tags.parquet
