[project]
name = "tatoeba"
version = "0.1.0"
description = ""
authors = [
    {name = "elichkaa",email = "elichka.cs@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars (>=1.35.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
